<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>xyz.hashdog.rdm</groupId>
        <artifactId>RedisDesktopManagerFX</artifactId>
        <version>1.0.4</version>
    </parent>

    <groupId>xyz.hashdog.rdm</groupId>
    <artifactId>rdm-ui</artifactId>
    <version>${rdm.version}</version>


    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <openjfx.version>20</openjfx.version>
        <sass.version>1.54.4</sass.version>
        <javafx.version>20</javafx.version> <!-- JavaFX 21 版本 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lib.commons-lang.version>3.12.0</lib.commons-lang.version>
        <lib.cssfx.version>11.5.1</lib.cssfx.version>
        <lib.ikonli.version>12.3.1</lib.ikonli.version>
        <lib.datafaker.version>1.3.0</lib.datafaker.version>
        <lib.jetbrains-annotations.version>23.0.0</lib.jetbrains-annotations.version>
        <test.assertj.version>3.21.0</test.assertj.version>
        <test.junit.version>5.8.1</test.junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>xyz.hashdog.rdm</groupId>
            <artifactId>rdm-common</artifactId>
            <version>${rdm.version}</version>
        </dependency>
        <dependency>
            <groupId>xyz.hashdog.rdm</groupId>
            <artifactId>rdm-redis-imp</artifactId>
            <version>${rdm.version}</version>
        </dependency>








        <!-- JavaFX 基础模块 -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.2</version>
        </dependency>
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>materialfx</artifactId>
            <version>11.17.0</version>
        </dependency>

        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.0.1</version>
        </dependency>




        <!--        <dependency>-->
        <!--            <groupId>io.github.mkpaz</groupId>-->
        <!--            <artifactId>atlantafx-styles</artifactId>-->
        <!--            <version>2.0.1</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${openjfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${openjfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${openjfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${openjfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${openjfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>${lib.ikonli.version}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-feather-pack</artifactId>
            <version>${lib.ikonli.version}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-material2-pack</artifactId>
            <version>${lib.ikonli.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${lib.jetbrains-annotations.version}</version>
        </dependency>

        <dependency>
            <groupId>fr.brouillard.oss</groupId>
            <artifactId>cssfx</artifactId>
            <version>${lib.cssfx.version}</version>
        </dependency>
        <dependency>
            <groupId>net.datafaker</groupId>
            <artifactId>datafaker</artifactId>
            <version>${lib.datafaker.version}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${test.assertj.version}</version>
            <scope>test</scope>
        </dependency>
      <!--  <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${test.junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${test.junit.version}</version>
            <scope>test</scope>
        </dependency>-->
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <configuration>
                    <executable>${java.home}/bin/java</executable>
                    <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>run</id>
                    </execution>
                </executions>
            </plugin>
           <!-- <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <archive>
                        <manifest>
                            <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>assembly</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>-->



            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.7.3</version>
                <executions>
                    <execution>
                        <id>bundling-for-windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>
                            <bundleJre>true</bundleJre>
                            <jdkPath>D:\soft\jdk\jdk-21_windows-x64_bin\jdk-21.0.7</jdkPath>
                            <generateInstaller>false</generateInstaller>
                            <administratorRequired>false</administratorRequired>
                            <platform>windows</platform>
                            <createZipball>true</createZipball>
<!--                            <additionalResources>-->
<!--                                <additionalResource>${name}.l4j.ini</additionalResource>-->
<!--                            </additionalResources>-->
                            <winConfig>
                                <headerType>console</headerType>
                                <icoFile>src/main/resources/icon/redis256.ico</icoFile>
                            </winConfig>
                            <vmArgs>
                                <arg>--module-path</arg>
                                <arg>libs</arg>
                                <arg>--add-modules</arg>
                                <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.base</arg>
                            </vmArgs>
                        </configuration>
                    </execution>

                    <execution>
                        <id>bundling-for-linux</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <platform>linux</platform>
                            <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>
                            <bundleJre>true</bundleJre>
                            <createTarball>true</createTarball>
                            <jdkPath>/home/tanhuang/soft/jdk-21.0.7</jdkPath>
                            <!--                            <additionalResources>-->
                            <!--                                <additionalResource>${name}.l4j.ini</additionalResource>-->
                            <!--                            </additionalResources>-->
                            <linuxConfig>
                                <pngFile>src/main/resources/icon/redis256.png</pngFile>
                            </linuxConfig>
                            <vmArgs>
                                <arg>--module-path</arg>
                                <arg>libs</arg>
                                <arg>--add-modules</arg>
                                <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.base</arg>
                            </vmArgs>
                        </configuration>
                    </execution>

                </executions>
            </plugin>

        </plugins>
    </build>

</project>